force-app/main/default/objects/Task_To_Acorn_Mapping__mdt/Task_To_Acorn_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>This metadata is used to have task fields and fetch it dynamically to send across to Acorn</description>
    <label>Task To Acorn Mapping</label>
    <pluralLabel>Task To Acorn Mappings</pluralLabel>
</CustomObject>