force-app/main/default/objects/Task_To_Acorn_Mapping__mdt/fields/Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_Name__c</fullName>
    <description>Holds the field name</description>
    <label>Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>