force-app/main/default/objects/Task_To_Acorn_Mapping__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Holds status of the record</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>