force-app/main/default/objects/Task_To_Acorn_Mapping__mdt/fields/JSON_field_name__c.field-meta.xml
<CustomField>
    <fullName>JSON_field_name__c</fullName>
    <label>JSON_field_name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>