force-app/main/default/objects/Task_To_Acorn_Mapping__mdt/fields/Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Name__c</fullName>
    <description>Holds object name</description>
    <label>Object_Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>