force-app/main/default/objects/Task_To_Acorn_Mapping__mdt/fields/Task_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Task_Record_Type__c</fullName>
    <description>Holds the record type of the task</description>
    <label>Task Record Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>