force-app/main/default/objects/Task_To_Acorn_Mapping__mdt/listViews/Dynamic_JSON_View.listView-meta.xml
<ListView>
    <fullName>Dynamic_JSON_View</fullName>
    <columns>Task_Record_Type__c</columns>
    <columns>Sequence__c</columns>
    <columns>Field_Name__c</columns>
    <columns>Data_Type__c</columns>
    <columns>Object_Name__c</columns>
    <columns>Is_Active__c</columns>
    <columns>JSON_field_name__c</columns>
    <filterScope>Everything</filterScope>
    <label>Dynamic JSON_View</label>
</ListView>